--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "Frontend for Gestor Financeiro - static templates served locally",
   "main": "frontend-server/server.js",
   "scripts": {
-    "start": "node frontend-server/server.js"
+    "start": "node frontend-server/server.js",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "clean:cypress": "rm -rf cypress/screenshots cypress/videos"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7",
-    "http-proxy-middleware": "^2.0.6"
+    "http-proxy-middleware": "^2.0.6",
+    "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "cypress": "^12.17.4"
   }
 }
